--- a/widget/index.html
+++ b/widget/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app = "smoochChatPluginWidget">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,6 +12,10 @@
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/buildfire.js"></script>
     <script src="../../../scripts/angular/angular.min.js"></script>
+    <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
+    <script src="app.js"></script>
+    <script src="enums.js"></script>
+    <script src="app.services.js"></script>
     <!--<script src="app.js"></script>-->
  	<!--
     <script src="../../../../scripts/angular/angular.min.js"></script>
@@ -21,8 +25,8 @@
     -->
 </head>
 <body>
-<div >
-    <span>Widget</span>
+<div ng-controller="WidgetHomeCtrl as WidgetHome">
+    <span>Widget-{{WidgetHome.helloWorldWidget}}</span>
 </div>
 </body>
 </html>
