--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -12,6 +12,7 @@
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../../scripts/buildfire.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
+    <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="app.js"></script>
     <script src="app.services.js"></script>
     <script src="enums.js"></script>
