--- a/widget/index.html
+++ b/widget/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html ng-app = "smoochChatPluginWidget">
+<html ng-app="smoochChatPluginWidget">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="../../../styles/helper.css" rel="stylesheet">
-    <link href="../../../styles/siteIcons.css" rel="stylesheet">
-	<!-- JS -->
+  <link href="../../../styles/helper.css" rel="stylesheet">
+  <link href="../../../styles/siteIcons.css" rel="stylesheet">
+  <!-- JS -->
 
 
-    <!-- JS -->
-    <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
-    <script src="../../../scripts/buildfire.js"></script>
-    <script src="../../../scripts/angular/angular.min.js"></script>
-    <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
-    <script src="app.js"></script>
-    <script src="enums.js"></script>
-    <script src="app.services.js"></script>
-    <!--<script src="app.js"></script>-->
- 	<!--
-    <script src="../../../../scripts/angular/angular.min.js"></script>
-    <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
+  <!-- JS -->
+  <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+  <script src="../../../scripts/buildfire.js"></script>
+  <script src="../../../scripts/angular/angular.min.js"></script>
+  <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
+  <script src="https://cdn.smooch.io/smooch.min.js"></script>
+  <script src="app.js"></script>
+  <script src="enums.js"></script>
+  <script src="app.services.js"></script>
+  <!--<script src="app.js"></script>-->
+  <!--
+   <script src="../../../../scripts/angular/angular.min.js"></script>
+   <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
 
-    <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
-    -->
+   <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+   -->
 </head>
 <body>
 <div ng-controller="WidgetHomeCtrl as WidgetHome">
-    <span>Widget-{{WidgetHome.helloWorldWidget}}</span>
+  <span>Widget-{{WidgetHome.helloWorldWidget}}</span>
 </div>
 </body>
 </html>
