--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -13,6 +13,7 @@
     <script src="../../../../scripts/buildfire.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
     <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
+    <!--<script src="https://cdn.smooch.io/smooch.min.js"></script>-->
     <script src="app.js"></script>
     <script src="app.services.js"></script>
     <script src="enums.js"></script>
@@ -25,6 +26,14 @@
 </head>
 <body>
 <div ng-controller="SettingsHomeCtrl as SettingsHome">
+    <div class="item clearfix row" ng-if="SettingsHome.data">
+        <div class="main pull-right col-md-9">
+            <div class="alert alert-danger alert-sm text-center"
+                 ng-if="!SettingsHome.apiKey">Please enter Smooch Chat API Key
+            </div>
+        </div>
+    </div>
+    <br>
     <!--<span>Settings -{{SettingsHome.helloWorld}}</span>-->
     <div class="item clearfix row margin-bottom-fifteen">
         <div class="labels col-md-3 padding-right-zero pull-left">
@@ -32,15 +41,18 @@
         </div>
         <div class="main col-md-9 pull-right clearfix">
             <div class="col-md-9 pull-left padding-left-zero">
-                <input id="api" name="api" type="text" class="form-control" placeholder="Enter Smooch chat API key here...">
+                <input id="apiKey"  name="apiKey" type="text" class="form-control" placeholder="Enter Smooch chat API key here..." ng-model = "SettingsHome.apiKey" required>
             </div>
             <div class="col-md-3 pull-right padding-zero">
-                <button class="btn btn-success stretch">
+                <button class="btn btn-success stretch" ng-click="SettingsHome.saveApi()">
                     Validate
                 </button>
             </div>
         </div>
     </div>
+
 </div>
+
+
 </body>
 </html>
