--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -50,6 +50,18 @@
                 </button>
             </div>
         </div>
+        </br></br>
+        <div class="main col-md-9 pull-right clearfix">
+            <div class="col-md-9 pull-left padding-left-zero">
+                <input id="headerText"  name="apiKey" type="text" class="form-control" placeholder="Enter Chat Header text here..." ng-model = "SettingsHome.headerText" required>
+            </div>
+            <div class="col-md-3 pull-right padding-zero">
+                <button class="btn btn-success stretch"
+                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.headerText">
+                    Update
+                </button>
+            </div>
+        </div>
     </div>
 
 </div>
