added dynamic header text in widget section for smooch chat

--- a/widget/index.html
+++ b/widget/index.html
@@ -27,8 +27,8 @@
 </head>
 <body>
 <div ng-controller="WidgetHomeCtrl as WidgetHome">
-  <div class="item clearfix row" ng-if="WidgetHome.invalidApiKey">
-    <div class="main col-md-12">
+  <div class="item clearfix row" ng-if="WidgetHome.data">
+    <div class="main col-md-12" ng-if="WidgetHome.invalidApiKey">
       <div class="alert alert-danger alert-sm text-center">Invalid Api key
       </div>
     </div>
