--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -43,24 +43,25 @@
             <div class="col-md-9 pull-left padding-left-zero">
                 <input id="apiKey"  name="apiKey" type="text" class="form-control" placeholder="Enter Smooch chat API key here..." ng-model = "SettingsHome.apiKey" required>
             </div>
-            <div class="col-md-3 pull-right padding-zero">
-                <button class="btn btn-success stretch"
-                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey">
-                    Save
-                </button>
-            </div>
+
         </div>
         </br></br>
+        <div class="labels col-md-3 padding-right-zero pull-left">
+            <span>Chat Header:</span>
+        </div>
         <div class="main col-md-9 pull-right clearfix">
             <div class="col-md-9 pull-left padding-left-zero">
                 <input id="headerText"  name="apiKey" type="text" class="form-control" placeholder="Enter Chat Header text here..." ng-model = "SettingsHome.headerText" required>
             </div>
-            <div class="col-md-3 pull-right padding-zero">
-                <button class="btn btn-success stretch"
-                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.headerText">
-                    Update
-                </button>
-            </div>
+        </div>
+        </br></br>
+        <div class="padding-zero">
+        <button class="btn btn-success stretch"
+                ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey || !SettingsHome.headerText">
+            Save
+        </button>
+
+
         </div>
     </div>
 
