Added some styles for the alignment of chat window in widget section.

--- a/widget/index.html
+++ b/widget/index.html
@@ -5,6 +5,7 @@
 
   <link href="../../../styles/helper.css" rel="stylesheet">
   <link href="../../../styles/siteIcons.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
   <!-- JS -->
 
 
