--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -53,15 +53,13 @@
             <div class="col-md-9 pull-left padding-left-zero">
                 <input id="headerText"  name="apiKey" type="text" class="form-control" placeholder="Enter Chat Header text here..." ng-model = "SettingsHome.headerText" required>
             </div>
-        </div>
-        </br></br>
-        <div class="padding-zero">
-        <button class="btn btn-success stretch"
-                ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey || !SettingsHome.headerText">
-            Save
-        </button>
-
-
+            </br></br>
+            <div class="col-md-9 pull-left padding-left-zero">
+                <button class="btn btn-success stretch"
+                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey || !SettingsHome.headerText">
+                    Save
+                </button>
+            </div>
         </div>
     </div>
 
