Made chat header value optional in settings section

--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -56,7 +56,7 @@
             </br></br>
             <div class="col-md-9 pull-left padding-left-zero">
                 <button class="btn btn-success stretch"
-                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey || !SettingsHome.headerText">
+                        ng-click="SettingsHome.saveApi()" ng-disabled="!SettingsHome.apiKey">
                     Save
                 </button>
             </div>
