stopped the click event from the smooch chat header click.

--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -54,7 +54,7 @@
     <div class="main col-md-9 pull-right clearfix">
       <div class="col-md-9 pull-left padding-left-zero">
         <input id="headerText" name="apiKey" type="text" class="form-control"
-               placeholder="Enter Chat Header text here..."
+               placeholder="How can we help?"
                ng-model="SettingsHome.headerText" required>
       </div>
       </br></br>
