Fixed the chat bubble color issue on new chat in widget section.

--- a/control/design/index.html
+++ b/control/design/index.html
@@ -33,7 +33,7 @@
         <div class="main col-md-9 pull-right">
             <div class="screens clearfix">
                 <div class="screen layouticon pull-left">
-                    <a class="border-radius-three default-background-hover text-center"  ng-if="DesignHome.data.design">
+                    <a class="border-radius-three default-background-hover text-center"  ng-if="DesignHome.data.design.color">
                         <span class="add-icon hidden">+</span>
                         <img
                                 ng-src="assets/images/{{DesignHome.data.design.color}}.png">
