--- a/widget/index.html
+++ b/widget/index.html
@@ -18,6 +18,7 @@
   <script src="app.js"></script>
   <script src="enums.js"></script>
   <script src="app.services.js"></script>
+  <script src="modals.js"></script>
   <!--<script src="app.js"></script>-->
   <!--
    <script src="../../../../scripts/angular/angular.min.js"></script>
