Corrected navigate to plugin instance method

--- a/widget/service.html
+++ b/widget/service.html
@@ -50,6 +50,13 @@
                         data.instanceId);
                     buildfire.pluginInstance.get([data.instanceId], function (error, instances) {
                       console.log('Instance data::::::::::::::::::', error, instances);
+                      if(instances && !error){
+                        buildfire.navigation.navigateTo({
+                          pluginId: instances[0].pluginId,
+                          instanceId: data.instanceId,
+                          title: instances[0].title
+                        });
+                      }
                     })
                   }
                 }
