widget side dynamic data store updated

--- a/widget/service.html
+++ b/widget/service.html
@@ -45,7 +45,29 @@
 
                 console.log("InstanceId :::::::::",buildfire.context.instanceId);
 
-                    buildfire.pluginInstance.get([buildfire.context.instanceId], function (error, instances) {
+                    var dynamicDataStoreObj={
+                                              "_buildfire": {
+                                                "plugins" :{
+                                                  "dataType" : "pluginInstance",
+                                                  "data": [buildfire.context.instanceId]
+                                                }
+
+                                              }
+                                           }
+
+                    buildfire.datastore.save(dynamicDataStoreObj, 'smoochBgService',function(err,data){
+                      if(err)
+                        console.log('there was a problem saving your data');
+                      else{
+                        console.log('your data has saved successfully');
+                        buildfire.datastore.getWithDynamicData("smoochBgService", function(err, result) {
+                        console.log('result set from dynamic DatastoreObj',result);
+                        });
+                      }
+
+                    });
+
+                    /*buildfire.pluginInstance.get([buildfire.context.instanceId], function (error, instances) {
                       console.log('Instance data::::::::::::::::::', error, instances);
                       if(instances && !error){
                         buildfire.navigation.navigateTo({
@@ -54,7 +76,9 @@
                           title: instances[0].title
                         });
                       }
-                    })
+                    })*/
+
+
 
 
             });
