code reverted to use get pluginInstance APi

--- a/widget/service.html
+++ b/widget/service.html
@@ -38,41 +38,16 @@
                 initObj.userId = randomId.id;
               }
             }
-
-            var dynamicDataStoreObj={
-              "_buildfire": {
-                "plugins" :{
-                  "dataType" : "pluginInstance",
-                  "data": [buildfire.context.instanceId]
-                }
-
-              }
-            }
-
-            buildfire.datastore.insert(dynamicDataStoreObj, 'smoochBgService',function(err,data){
-              if(err)
-                console.log('there was a problem saving your data');
-              else{
-                console.log('your data has saved successfully');
-                buildfire.datastore.getWithDynamicData("smoochBgService", function(err, result) {
-                  console.log('result set from dynamic DatastoreObj',result);
-                });
-              }
-
-            });
-
             Smooch.on('message:received', function (message) {
               console.log('the user received a message', message);
               console.log('------------------------', obj.id);
 
 
-                console.log("InstanceId :::::::::",buildfire.context.instanceId);
+              console.log("InstanceId :::::::::",buildfire.context.instanceId);
+              console.log('your data has saved successfully');
 
 
-
-
-
-                    /*buildfire.pluginInstance.get([buildfire.context.instanceId], function (error, instances) {
+                    buildfire.pluginInstance.get([buildfire.context.instanceId], function (error, instances) {
                       console.log('Instance data::::::::::::::::::', error, instances);
                       if(instances && !error){
                         buildfire.navigation.navigateTo({
@@ -81,11 +56,7 @@
                           title: instances[0].title
                         });
                       }
-                    })*/
-
-
-
-
+                    })
             });
 
             smoochApp = Smooch.init(initObj);
