--- a/widget/service.html
+++ b/widget/service.html
@@ -15,62 +15,52 @@
 
   <script>
     var smoochApp = {};
-    setTimeout(function(){
-      buildfire.datastore.get('smoochChatInfo', function (err, obj) {
-        if (obj) {
-          var initObj = {};
-          if (obj.data.settings.type == "Private") {
-            initObj.appToken = obj.data.settings.apiKey;
-            initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
+    buildfire.datastore.get('smoochChatInfo', function (err, obj) {
+      if (obj) {
+        var initObj = {};
+        if (obj.data.settings.type == "Private") {
+          initObj.appToken = obj.data.settings.apiKey;
+          initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
 
-            buildfire.auth.getCurrentUser(function (err, user) {
-              if (user) {
-                initObj.givenName = user.displayName;
-                initObj.email = user.email;
-                initObj.userId = user._id;
-              } else {
-                try {
-                  var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-                } catch (e) {
-                  console.log("Error while parsing value: ", e);
-                }
-                console.log("****************", randomId);
-                if (randomId && randomId.id) {
-                  initObj.userId = randomId.id;
-                }
+          buildfire.auth.getCurrentUser(function (err, user) {
+            if (user) {
+              initObj.givenName = user.displayName;
+              initObj.email = user.email;
+              initObj.userId = user._id;
+            } else {
+              try {
+                var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
+              } catch (e) {
+                console.log("Error while parsing value: ", e);
               }
-
-              Smooch.on('message:received', function (message) {
-                console.log('the user received a message', message);
-                console.log('------------------------', obj.id);
-
-                buildfire.datastore.getWithDynamicData('smoochChatInfo', function (err, obj) {
-                  console.log(obj);
-                });
-
-                console.log("InstanceId :::::::::",buildfire.context.instanceId);
-                console.log('your data has saved successfully');
-
-                buildfire.pluginInstance.get([buildfire.context.instanceId], function (error, instances) {
-                  console.log('Instance data::::::::::::::::::', error, instances);
-                  if(instances && !error){
-                    buildfire.navigation.navigateTo({
-                      pluginId: instances[0].pluginId,
-                      instanceId: data.instanceId,
-                      title: instances[0].title
-                    });
+              console.log("****************", randomId);
+              if (randomId && randomId.id) {
+                initObj.userId = randomId.id;
+              }
+            }
+            Smooch.on('message:received', function (message) {
+              console.log('the user received a message', message);
+              console.log('------------------------', obj.id);
+              buildfire.getContext(function (error, data) {
+                console.log('Instance Id::::::::::::::::::', error, data);
+                if (error) {
+                } else {
+                  if (data.instanceId) {
+                    console.log('type::::::::::::::::::', typeof
+                            data.instanceId);
+                    buildfire.pluginInstance.get([data.instanceId], function (error, instances) {
+                      console.log('Instance data::::::::::::::::::', error, instances);
+                    })
                   }
-                })
-              });
-
-              smoochApp = Smooch.init(initObj);
+                }
+              })
             });
-          }
+
+            smoochApp = Smooch.init(initObj);
+          });
         }
-      });
-
-    },1000)
-
+      }
+    });
 
   </script>
 
