--- a/widget/service.html
+++ b/widget/service.html
@@ -15,52 +15,53 @@
 
   <script>
     var smoochApp = {};
-    buildfire.datastore.get('smoochChatInfo', function (err, obj) {
-      if (obj) {
-        var initObj = {};
-        if (obj.data.settings.type == "Private") {
-          initObj.appToken = obj.data.settings.apiKey;
-          initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
+    setTimeout(function(){
+      buildfire.datastore.get(function (err, obj) {
+        if (obj) {
+          var initObj = {};
+          if (obj.data.settings.type == "Private") {
+            initObj.appToken = obj.data.settings.apiKey;
+            initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
 
-          buildfire.auth.getCurrentUser(function (err, user) {
-            if (user) {
-              initObj.givenName = user.displayName;
-              initObj.email = user.email;
-              initObj.userId = user._id;
-            } else {
-              try {
-                var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-              } catch (e) {
-                console.log("Error while parsing value: ", e);
-              }
-              console.log("****************", randomId);
-              if (randomId && randomId.id) {
-                initObj.userId = randomId.id;
-              }
-            }
-            Smooch.on('message:received', function (message) {
-              console.log('the user received a message', message);
-              console.log('------------------------', obj.id);
-              buildfire.getContext(function (error, data) {
-                console.log('Instance Id::::::::::::::::::', error, data);
-                if (error) {
-                } else {
-                  if (data.instanceId) {
-                    console.log('type::::::::::::::::::', typeof
-                            data.instanceId);
-                    buildfire.pluginInstance.get([data.instanceId], function (error, instances) {
-                      console.log('Instance data::::::::::::::::::', error, instances);
-                    })
-                  }
+            buildfire.auth.getCurrentUser(function (err, user) {
+              if (user) {
+                initObj.givenName = user.displayName;
+                initObj.email = user.email;
+                initObj.userId = user._id;
+              } else {
+                try {
+                  var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
+                } catch (e) {
+                  console.log("Error while parsing value: ", e);
                 }
-              })
-            });
+                console.log("****************", randomId);
+                if (randomId && randomId.id) {
+                  initObj.userId = randomId.id;
+                }
+              }
 
-            smoochApp = Smooch.init(initObj);
-          });
+              Smooch.on('message:received', function (message) {
+                console.log('the user received a message', message);
+                console.log("InstanceId :::::::::",buildfire.context.instanceId);
+                buildfire.datastore.getWithDynamicData(function (err, result) {
+                  var instance=result.data._buildfire.plugins.result[0].data;
+                  console.log(instance);
+                  buildfire.navigation.navigateTo({
+                    pluginId: instance[0].pluginType.token,
+                    instanceId: instance[0].instanceId,
+                    title: instance[0].title
+                  });
+                });
+              });
+
+              smoochApp = Smooch.init(initObj);
+            });
+          }
         }
-      }
-    });
+      });
+
+    },1000)
+
 
   </script>
 
