trail code added to test on beta

--- a/widget/service.html
+++ b/widget/service.html
@@ -14,51 +14,24 @@
   -->
 
   <script>
-    var smoochApp = {};
+    var options,counter;
+    function init() {
 
-    buildfire.datastore.get('smoochChatInfo', function (err, obj) {
-      if (obj) {
-        var initObj = {};
-        if (obj.data.settings.type == "Private") {
-          initObj.appToken = obj.data.settings.apiKey;
-          initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
+      setTimeout(function () {
 
-          buildfire.auth.getCurrentUser(function (err, user) {
-            if (user) {
-              initObj.givenName = user.displayName;
-              initObj.email = user.email;
-              initObj.userId = user._id;
-            } else {
-              try {
-                var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-              } catch (e) {
-                console.log("Error while parsing value: ", e);
-              }
-              console.log("****************", randomId);
-              if (randomId && randomId.id) {
-                initObj.userId = randomId.id;
-              }
-            }
+          buildfire.navigation.openWindow("www.google.com", "_blank");
 
-            Smooch.on('message:received', function (message) {
-              console.log('the user received a message', message);
-              console.log("InstanceId :::::::::",buildfire.context.instanceId);
-              buildfire.datastore.getWithDynamicData('smoochChatInfo', function (err, result) {
-                var instance=result.data._buildfire.plugins.result[0].data;
-                console.log(instance);
-                buildfire.navigation.navigateTo({
-                  pluginId: instance[0].pluginType.token,
-                  instanceId: instance[0].instanceId,
-                  title: instance[0].title
-                });
-              });
-            });
-
-            smoochApp = Smooch.init(initObj);
-          });
-        }
+      }, 8000);
+    }
+    buildfire.datastore.get('smoochChatInfo',function(err,obj){
+      if(obj){
+        options = obj.data;
+        init();
       }
     });
+    buildfire.datastore.onUpdate('smoochChatInfo',function(){
+      init();
+    })
   </script>
 
 </head>
