minor issue related to syntax corrected

--- a/widget/service.html
+++ b/widget/service.html
@@ -24,7 +24,7 @@
       getDataAndAttachSmoochEvent(res);
     });
 
-    getDataAndAttachSmoochEvent(obj){
+    function getDataAndAttachSmoochEvent(obj){
       if (obj) {
         var initObj = {};
         if (obj.data.settings.type == "Private") {
