onUpdate of datatstore method updated

--- a/widget/service.html
+++ b/widget/service.html
@@ -20,9 +20,9 @@
       getDataAndAttachSmoochEvent(res);
     });
 
-    /*buildfire.datastore.onUpdate('smoochChatInfo', function (err, res) {
+    buildfire.datastore.onUpdate('smoochChatInfo', function (err, res) {
       getDataAndAttachSmoochEvent(res);
-    });*/
+    });
 
     function getDataAndAttachSmoochEvent(obj){
       if (obj) {
