onUpdate method modified

--- a/widget/service.html
+++ b/widget/service.html
@@ -20,7 +20,7 @@
       getDataAndAttachSmoochEvent(res);
     });
 
-    buildfire.datastore.onUpdate('smoochChatInfo', function (err, res) {
+    buildfire.datastore.onUpdate( function (err, res) {
       getDataAndAttachSmoochEvent(res);
     });
 
