buildfire messaging service implemented in service.html

--- a/widget/service.html
+++ b/widget/service.html
@@ -21,7 +21,7 @@
     });
 
 
-    Buildfire.messaging.onReceivedMessage = function (event) {
+    buildfire.messaging.onReceivedMessage = function (event) {
       switch (event && event.name) {
 
         case "SETTINGS_UPDATED" :
