--- a/widget/service.html
+++ b/widget/service.html
@@ -13,68 +13,71 @@
   <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
   -->
 
-  <script>
-    var smoochApp = {};
+  <script type="text/javascript">
+    (function () {
+      var smoochApp = {};
 
-    buildfire.datastore.get('smoochChatInfo', function (err, res) {
-      getDataAndAttachSmoochEvent(res);
-    });
+      buildfire.datastore.get('smoochChatInfo', function (err, res) {
+        getDataAndAttachSmoochEvent(res);
+      });
 
 
-    buildfire.messaging.onReceivedMessage = function (event) {
-      switch (event && event.name) {
+      buildfire.messaging.onReceivedMessage = function (event) {
+        switch (event && event.name) {
 
-        case "SETTINGS_UPDATED" :
-          getDataAndAttachSmoochEvent(event)
-      }
-    };
+          case "SETTINGS_UPDATED" :
+            getDataAndAttachSmoochEvent(event)
+        }
+      };
 
-    function getDataAndAttachSmoochEvent(obj){
-      if (obj) {
-        var initObj = {};
-        if (obj.data.settings.type == "Private") {
-          initObj.appToken = obj.data.settings.apiKey;
-          initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
+      function getDataAndAttachSmoochEvent(obj){
+        if (obj) {
+          var initObj = {};
+          if (obj.data.settings.type == "Private") {
+            initObj.appToken = obj.data.settings.apiKey;
+            initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
 
-          buildfire.auth.getCurrentUser(function (err, user) {
-            if (user) {
-              initObj.givenName = user.displayName;
-              initObj.email = user.email;
-              initObj.userId = user._id;
-            } else {
-              try {
-                var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-              } catch (e) {
-                console.log("Error while parsing value: ", e);
+            buildfire.auth.getCurrentUser(function (err, user) {
+              if (user) {
+                initObj.givenName = user.displayName;
+                initObj.email = user.email;
+                initObj.userId = user._id;
+              } else {
+                try {
+                  var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
+                } catch (e) {
+                  console.log("Error while parsing value: ", e);
+                }
+                console.log("****************", randomId);
+                if (randomId && randomId.id) {
+                  initObj.userId = randomId.id;
+                }
               }
-              console.log("****************", randomId);
-              if (randomId && randomId.id) {
-                initObj.userId = randomId.id;
-              }
-            }
 
-            Smooch.on('message:received', function (message) {
-              console.log('the user received a message', message);
-              console.log("InstanceId :::::::::",buildfire.context.instanceId);
-              buildfire.datastore.getWithDynamicData('smoochChatInfo', function (err, result) {
-                var instance=result.data._buildfire.plugins.result[0].data;
-                console.log(instance);
-                buildfire.navigation.navigateTo({
-                  pluginId: instance.pluginType.token,
-                  instanceId: instance.instanceId,
-                  title: instance.title,
-                  folderName : instance.pluginType.folderName
+              Smooch.on('message:received', function (message) {
+                console.log('the user received a message', message);
+                console.log("InstanceId :::::::::",buildfire.context.instanceId);
+                buildfire.datastore.getWithDynamicData('smoochChatInfo', function (err, result) {
+                  var instance=result.data._buildfire.plugins.result[0].data;
+                  console.log(instance);
+                  buildfire.navigation.navigateTo({
+                    pluginId: instance.pluginType.token,
+                    instanceId: instance.instanceId,
+                    title: instance.title,
+                    folderName : instance.pluginType.folderName
+                  });
                 });
+
+
               });
 
-
+              smoochApp = Smooch.init(initObj);
             });
-
-            smoochApp = Smooch.init(initObj);
-          });
+          }
         }
       }
-    }
+    })();
+
   </script>
 
 </head>
